--- a/api-mock-server/package.json
+++ b/api-mock-server/package.json
@@ -11,6 +11,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "prettier": {
+    "printWidth": 100
+  },
   "dependencies": {
     "@tinyhttp/app": "^1.0.3",
     "@tinyhttp/cors": "^1.2.5",
@@ -39,6 +42,7 @@
     "@types/node": "^14.14.7",
     "@types/ramda": "^0.27.32",
     "@types/source-map-support": "^0.5.3",
+    "@types/sqlite3": "^3.1.7",
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "onchange": "^7.1.0",
