--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "passport": "^0.4.0",
     "redis": "^3.0.2",
     "snyk": "^1.400.0",
+    "uuid": "^3.4.0",
     "ws": "^7.4.0"
   },
   "devDependencies": {
