--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.1",
     "better-npm-run": "^0.1.1",
     "connect-redis": "^5.0.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv-flow": "^3.2.0",
     "express": "^4.17.1",
