--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.1",
     "better-npm-run": "^0.1.1",
     "connect-redis": "^5.0.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv-flow": "^3.2.0",
     "express": "^4.17.1",
@@ -34,6 +35,7 @@
     "passport": "^0.4.0",
     "redis": "^3.0.2",
     "snyk": "^1.400.0",
+    "uuid": "^3.4.0",
     "ws": "^7.4.0"
   },
   "devDependencies": {
