--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "@testing-library/react": "^11.1.0",
     "@types/classnames": "^2.2.11",
     "@types/jest": "^26.0.14",
+    "@types/js-cookie": "^2.2.7",
     "@types/lodash.debounce": "^4.0.6",
     "@types/qs": "^6.9.5",
     "@types/react": "^16.9.50",
@@ -88,6 +89,7 @@
     "dayjs": "^1.10.4",
     "env-cmd": "^10.1.0",
     "forhandsvisningsfil": "^1.1.4",
+    "js-cookie": "^3.0.0",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
     "nav-datovelger": "^11.0.0",
