--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "helmet": "^4.1.0",
     "http-proxy-middleware": "^1.0.5",
     "https-proxy-agent": "^5.0.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "morgan-body": "^2.5.1",
     "morgan-json": "^1.1.0",
