--- a/frontend/package.json
+++ b/frontend/package.json
@@ -81,6 +81,7 @@
     "worker-loader": "^3.0.8"
   },
   "dependencies": {
+    "@navikt/ds-icons": "^0.5.2",
     "@navikt/fnrvalidator": "^1.1.4",
     "@reduxjs/toolkit": "^1.6.1",
     "@xstate/react": "^1.5.1",
