--- a/server/.env
+++ b/server/.env
@@ -8,3 +8,4 @@ DOWNSTREAM_API_CLIENT_ID_PROD=d96d4954-5e99-4050-910b-9dc7a108a6eb
 DOWNSTREAM_API_SERVICE_URL=http://kabal-api
 DOWNSTREAM_API_PATH=/api
 CACHE_EXP=3600
+PORT=8090
