--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@slack/bolt": "^3.6.0",
     "axios": "^0.21.1",
     "better-npm-run": "^0.1.1",
     "connect-redis": "^5.0.0",
