--- a/nais/dev.yaml
+++ b/nais/dev.yaml
@@ -35,7 +35,4 @@ spec:
   {{/each}}
   envFrom:
     - secret: klagesessionkey
-    - secretRef:
-        name: slack-e2e-secrets
-    - configMapRef:
-        name: slack-e2e-configmap
+    - secret: slackurl
