--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@elastic/ecs-morgan-format": "^1.1.0",
     "@slack/bolt": "^3.6.0",
     "axios": "^0.21.1",
     "better-npm-run": "^0.1.1",
@@ -31,7 +32,6 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "morgan-body": "^2.5.1",
-    "morgan-json": "^1.1.0",
     "node-fetch": "^2.6.1",
     "openid-client": "^4.0.2",
     "passport": "^0.4.0",
