Adapt frontend to new /me endpoint

--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -12,5 +12,8 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
-  "prettier.requireConfig": true
+  "prettier.requireConfig": true,
+  "[json]": {
+    "editor.defaultFormatter": "vscode.json-language-features"
+  }
 }
