--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,9 @@
   },
   "dependencies": {
     "@elastic/ecs-morgan-format": "^1.1.0",
+    "@types/cors": "^2.8.12",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv-flow": "^3.2.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
