--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -1,17 +1,20 @@
 {
+  "ignorePatterns": ["komponenter/", "tilstand/", "domene/", "stilark/", "utility/", "styled-components/"],
   "extends": [
     "prettier",
     "eslint:recommended",
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
     "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "plugin:jest/all"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": "./tsconfig.json"
   },
-  "plugins": ["jsx-a11y", "react", "react-hooks", "prettier", "import", "prefer-arrow"],
+  "plugins": ["@typescript-eslint", "jsx-a11y", "react", "react-hooks", "prettier", "import", "prefer-arrow", "jest"],
   "settings": {
     "react": {
       "version": "17"
@@ -32,8 +35,22 @@
         "tabWidth": 2
       }
     ],
-    "complexity": ["error", { "max": 5 }],
+    "max-lines": ["error", {
+      "max": 200,
+      "skipBlankLines": true,
+      "skipComments": true
+    }],
+    "max-depth": ["error", { "max": 2 }],
+    "no-lonely-if": "error",
+    "complexity": ["error", { "max": 11 }],
     "curly": ["error", "all"],
+    "default-case": "error",
+    "default-case-last": "error",
+    "no-alert": "error",
+    "no-eval": "error",
+    "no-extend-native": "error",
+    "no-proto": "error",
+    "no-return-assign": ["error", "always"],
     "no-implicit-coercion": "error",
     "no-nested-ternary": "error",
     "no-unneeded-ternary": "error",
@@ -58,7 +75,11 @@
     "no-duplicate-imports": "error",
     "no-var": "error",
     "eqeqeq": "error",
+    "radix": ["error", "always"],
+    "yoda": ["error", "never"],
+    "no-useless-return": "error",
     "no-else-return": "error",
+    "array-callback-return": "error",
     "object-shorthand": ["error", "always"],
     "prefer-rest-params": "error",
     "prefer-spread": "error",
@@ -91,8 +112,23 @@
     "@typescript-eslint/no-var-requires": 0,
     "@typescript-eslint/no-unused-vars": ["error"],
     "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/strict-boolean-expressions": "error",
+    "@typescript-eslint/array-type": "error",
+    "@typescript-eslint/no-unsafe-assignment": "error",
+    "@typescript-eslint/prefer-reduce-type-parameter": "error",
+    "@typescript-eslint/switch-exhaustiveness-check": "error",
+    "@typescript-eslint/prefer-nullish-coalescing": "error",
+    "@typescript-eslint/prefer-includes": "error",
+    "@typescript-eslint/consistent-type-definitions": ["error", "interface"],
+    "@typescript-eslint/consistent-type-imports": ["error", { "prefer": "no-type-imports" }],
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "jest/no-disabled-tests": "warn",
+    "jest/no-focused-tests": "error",
+    "jest/no-identical-title": "error",
+    "jest/prefer-to-have-length": "warn",
+    "jest/valid-expect": "error",
+    "jest/prefer-expect-assertions": "error"
   }
 }
