--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,9 @@
     "local": "env-cmd -f .env.development webpack-dev-server --config ./webpack.config.local.js --mode development",
     "test": "jest",
     "testcov": "jest --coverage --no-cache",
-    "lint": "npx eslint src --ext .ts,.tsx,.js,.jsx --color",
-    "lint-fix": "npx eslint src --ext .ts,.tsx,.js,.jsx --color --fix"
+    "lint": "npx eslint src --color",
+    "lint-fix": "npx eslint src --color --fix",
+    "prepare": "husky install"
   },
   "jest": {
     "collectCoverage": true,
@@ -31,7 +32,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.1.0",
     "@types/classnames": "^2.3.1",
-    "@types/jest": "^26.0.14",
+    "@types/jest": "^27.0.2",
     "@types/js-cookie": "^2.2.7",
     "@types/lodash.debounce": "^4.0.6",
     "@types/qs": "^6.9.7",
@@ -45,7 +46,6 @@
     "@types/styled-components": "^5.1.12",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "concurrently": "^5.3.0",
     "copy-webpack-plugin": "^6.4.1",
@@ -54,25 +54,25 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-jest": "^24.5.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
-    "husky": "^4.3.0",
-    "jest": "^26.5.3",
-    "jest-transform-stub": "^2.0.0",
+    "husky": "^7.0.2",
+    "jest": "^27.2.4",
     "less": "^3.12.2",
     "less-loader": "^7.0.1",
     "lint-staged": "^11.1.2",
     "mini-css-extract-plugin": "^1.2.1",
-    "prettier": "^2.3.2",
+    "prettier": "^2.4.1",
     "prop-types": "^15.7.2",
     "react-hot-loader": "^4.13.0",
     "rxjs-marbles": "^6.0.1",
     "style-loader": "^1.2.1",
-    "ts-jest": "^26.4.1",
+    "ts-jest": "^27.0.5",
     "ts-loader": "^8.0.4",
     "typescript": "^4.3.5",
     "watchpack": "^1.7.4",
