Set up lint-staged with husky
Co-authored-by: Marianne Hval <mahval@users.noreply.github.com>
Co-authored-by: Daniel <eriksson-daniel@users.noreply.github.com>

--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "ignorePatterns": ["komponenter/", "tilstand/", "domene/", "stilark/", "utility/", "styled-components/"],
+  "ignorePatterns": ["/*.*", "komponenter/", "tilstand/", "domene/", "stilark/", "utility/", "styled-components/"],
   "extends": [
     "prettier",
     "eslint:recommended",
