--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -32,7 +32,8 @@
         "semi": true,
         "singleQuote": true,
         "printWidth": 120,
-        "tabWidth": 2
+        "tabWidth": 2,
+        "endOfLine": "lf"
       }
     ],
     "max-lines": ["error", {
@@ -40,6 +41,7 @@
       "skipBlankLines": true,
       "skipComments": true
     }],
+    "linebreak-style": ["error", "unix"],
     "max-depth": ["error", { "max": 2 }],
     "no-lonely-if": "error",
     "complexity": ["error", { "max": 11 }],
