Tidy up k8s secrets

--- a/nais/dev.yaml
+++ b/nais/dev.yaml
@@ -35,4 +35,5 @@ spec:
      - {{url}}
   {{/each}}
   envFrom:
-    - secret: kabalfrontend
+    - secret: kabal-session-key
+    - secret: slack-url
