--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -1,11 +1,8 @@
-name: E2E-tester
+name: E2E tests
 
 on:
   workflow_dispatch:
 
-env:
-  IMAGE: docker.pkg.github.com/${{ github.repository }}/kabal-frontend:${{ github.sha }}
-  LATEST: docker.pkg.github.com/${{ github.repository }}/kabal-frontend:latest
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,12 +13,12 @@ jobs:
       - name: Set UUID
         id: generate-uuid
         uses: filipstefansson/uuid-action@v1.1
-      - name: Run acceptance tests
+      - name: Run E2E tests
         uses: nais/deploy/actions/deploy@master
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-gcp
-          VAR: app=kabal,jobname=klage-job-${{ steps.generate-uuid.outputs.uuid }}
+          VAR: app=kabal-e2e-tests,jobname=kabal-e2e-tests-job-${{ steps.generate-uuid.outputs.uuid }}
           TEAM: klage
-          RESOURCE: deploy/e2ejob.yml
+          RESOURCE: nais/e2ejob.yaml
         timeout-minutes: 5
