--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -9,7 +9,7 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-body-size: "100M"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
 spec:
-  image: {{IMAGE}}
+  image: {{image}}
   replicas:
     min: 2
     max: 3
