--- a/server/.vscode/settings.json
+++ b/server/.vscode/settings.json
@@ -1,4 +1,16 @@
 {
+    "files.exclude": {
+      "dist": true,
+      "dist/**": true
+    },
+    "files.watcherExclude": {
+      "**/.git/objects/**": true,
+      "**/.git/subtree-cache/**": true,
+      "**/node_modules/*/**": true,
+      "**/.hg/store/**": true,
+      "dist": true,
+      "dist/**": true
+    },
     "typescript.validate.enable": true,
     "eslint.validate": [
       "javascript",
