Replace Typescript compiler with SWC

--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -1,4 +1,5 @@
 {
+  "ignorePatterns": ["Dockerfile", "*.json", "*.md", ".*", "webpack.*", "jest.*"],
   "extends": [
     "prettier",
     "eslint:recommended",
