--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,9 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@swc/core": "^1.2.106",
+    "@swc/helpers": "^0.2.13",
+    "@swc/jest": "^0.2.5",
     "@types/jest": "^27.0.2",
     "@types/qs": "^6.9.7",
     "@types/react": "^17.0.28",
@@ -57,13 +60,11 @@
     "prettier": "^2.4.1",
     "react-hot-loader": "^4.13.0",
     "style-loader": "^1.2.1",
-    "ts-jest": "^27.0.5",
-    "ts-loader": "^8.1.0",
+    "swc-loader": "^0.1.15",
     "typescript": "^4.4.3",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2",
-    "worker-loader": "^3.0.8"
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "@navikt/ds-icons": "^0.5.2",
