--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,11 +5,11 @@
   "main": "index.tsx",
   "scripts": {
     "clean": "rimraf dist",
-    "build:js": "webpack --config ./webpack.config.js --mode production",
+    "build:js": "webpack --mode production",
     "build:html": "copyfiles -f ./public/index.html dist",
     "build": "npm run build:js && npm run build:html",
-    "start": "env-cmd -f .env.development webpack-dev-server --config ./webpack.config.js --mode development",
-    "local": "env-cmd -f .env.development webpack-dev-server --config ./webpack.config.local.js --mode development",
+    "start": "env-cmd -f .env.development webpack-dev-server --mode development",
+    "local": "env-cmd -f .env.development webpack-dev-server --mode development",
     "test": "jest",
     "testcov": "jest --coverage --no-cache",
     "lint": "npx eslint src --color",
