--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,6 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@swc/core": "^1.2.106",
-    "@swc/helpers": "^0.2.13",
-    "@swc/jest": "^0.2.5",
     "@types/jest": "^27.0.2",
     "@types/qs": "^6.9.7",
     "@types/react": "^17.0.28",
@@ -52,7 +49,8 @@
     "prettier": "^2.4.1",
     "react-hot-loader": "^4.13.0",
     "style-loader": "^1.2.1",
-    "swc-loader": "^0.1.15",
+    "ts-jest": "^27.0.7",
+    "ts-loader": "^8.3.0",
     "typescript": "^4.4.3",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
