--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,7 @@
   "dependencies": {
     "@navikt/ds-icons": "^0.5.2",
     "@navikt/fnrvalidator": "^1.1.4",
+    "@styled-icons/material": "^10.34.0",
     "@reduxjs/toolkit": "^1.6.2",
     "classnames": "^2.3.1",
     "env-cmd": "^10.1.0",
@@ -93,6 +94,9 @@
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "redux": "^4.1.1",
+    "slate": "^0.66.5",
+    "slate-history": "^0.66.0",
+    "slate-react": "^0.69.0",
     "styled-components": "^5.3.1"
   }
 }
