--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -37,6 +37,8 @@ spec:
       rules:
         - application: klage-redis-fe
         - application: kabal-api
+        - application: kabal-smart-editor-api
+        - application: kabal-json-to-pdf
       external:
         - host: login.microsoftonline.com
   ingresses:
