--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -39,6 +39,7 @@ spec:
         - application: kabal-api
         - application: kabal-smart-editor-api
         - application: kabal-json-to-pdf
+        - application: kabal-search
       external:
         - host: login.microsoftonline.com
   ingresses:
