--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -128,7 +128,7 @@
     "@typescript-eslint/consistent-type-definitions": ["error", "interface"],
     "@typescript-eslint/consistent-type-imports": ["error", { "prefer": "no-type-imports" }],
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn",
+    "react-hooks/exhaustive-deps": "error",
     "react/prop-types": "off",
     "jest/no-disabled-tests": "warn",
     "jest/no-focused-tests": "error",
