--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,8 +56,8 @@
   "dependencies": {
     "@navikt/ds-icons": "^0.6.2",
     "@navikt/fnrvalidator": "^1.1.4",
-    "@styled-icons/material": "^10.34.0",
     "@reduxjs/toolkit": "^1.6.2",
+    "@styled-icons/material": "^10.34.0",
     "classnames": "^2.3.1",
     "env-cmd": "^10.1.0",
     "nav-frontend-alertstriper": "^3.0.38",
@@ -97,6 +97,7 @@
     "slate": "^0.70.0",
     "slate-history": "^0.66.0",
     "slate-react": "^0.70.0",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "superstruct": "^0.15.3"
   }
 }
