--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -6,15 +6,22 @@
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
     "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:jest/all"
+    "plugin:@typescript-eslint/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "sourceType": "module",
     "project": "./tsconfig.json"
   },
-  "plugins": ["@typescript-eslint", "jsx-a11y", "react", "react-hooks", "prettier", "import", "prefer-arrow", "jest"],
+  "plugins": [
+    "@typescript-eslint",
+    "jsx-a11y",
+    "react",
+    "react-hooks",
+    "prettier",
+    "import",
+    "prefer-arrow"
+  ],
   "settings": {
     "react": {
       "version": "17"
@@ -136,5 +143,18 @@
     "jest/prefer-to-have-length": "warn",
     "jest/valid-expect": "error",
     "jest/prefer-expect-assertions": "error"
-  }
+  },
+  "overrides": [
+    {
+      "files": [
+        "**/**.test.{ts,tsx}"
+      ],
+      "extends": [
+        "plugin:jest/all"
+      ],
+      "plugins": [
+        "jest"
+      ]
+    }
+  ]
 }
