--- a/nais/redis.yaml
+++ b/nais/redis.yaml
@@ -9,7 +9,7 @@ metadata:
   annotations:
     nais.io/restricted: "true"
 spec:
-  image: docker.pkg.github.com/navikt/kabal-redis/kabal-redis:a3431b0b2ae0f5902686086f1df7a1b6735b86ed
+  image: docker.pkg.github.com/navikt/klage-redis/klage-redis:latest
   port: 6379
   replicas: # A single Redis-app doesn't scale
     min: 1
