Fix Gosys links for dev and prod

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "build:js": "webpack --mode production",
     "build:static": "copyfiles -f ./public/index.html dist && copyfiles -u 1 ./assets/* dist/assets",
     "build": "npm run build:js && npm run build:static",
-    "start": "env-cmd -f .env.development webpack serve",
+    "start": "webpack serve --mode development",
     "local": "npm start",
     "test": "jest",
     "testcov": "jest --coverage --no-cache",
@@ -59,7 +59,6 @@
     "@reduxjs/toolkit": "^1.6.2",
     "@styled-icons/material": "^10.34.0",
     "classnames": "^2.3.1",
-    "env-cmd": "^10.1.0",
     "nav-frontend-alertstriper": "^3.0.38",
     "nav-frontend-alertstriper-style": "^2.0.30",
     "nav-frontend-chevron": "^1.0.24",
