--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -36,6 +36,7 @@ spec:
       rules:
         - application: klage-redis-fe
         - application: kabal-api
+        - application: kabal-anke-api
         - application: kabal-smart-editor-api
         - application: kabal-json-to-pdf
         - application: kabal-search
