--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,44 +17,44 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^27.0.3",
+    "@types/jest": "^27.4.0",
     "@types/qs": "^6.9.7",
-    "@types/react": "^17.0.37",
+    "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
-    "@types/react-redux": "^7.1.20",
-    "@types/styled-components": "^5.1.17",
+    "@types/react-redux": "^7.1.22",
+    "@types/styled-components": "^5.1.22",
     "@types/webpack-env": "^1.16.3",
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
     "copyfiles": "^2.4.1",
-    "css-loader": "^6.5.1",
-    "eslint": "^8.4.1",
+    "css-loader": "^6.6.0",
+    "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jest": "^25.3.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.1.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
-    "jest": "^27.4.4",
+    "jest": "^27.5.1",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
-    "lint-staged": "^12.1.2",
+    "lint-staged": "^12.3.3",
     "prettier": "^2.5.1",
     "style-loader": "^3.3.1",
-    "ts-jest": "^27.1.1",
+    "ts-jest": "^27.1.3",
     "ts-loader": "^9.2.6",
-    "typescript": "^4.5.3",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0"
+    "typescript": "^4.5.5",
+    "webpack": "^5.68.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
     "@navikt/ds-icons": "^0.7.0",
     "@navikt/fnrvalidator": "^1.1.4",
-    "@reduxjs/toolkit": "^1.7.0",
+    "@reduxjs/toolkit": "^1.7.2",
     "@styled-icons/material": "^10.34.0",
     "classnames": "^2.3.1",
     "nav-frontend-alertstriper": "^3.0.38",
@@ -84,17 +84,16 @@
     "nav-frontend-tabell-style": "^0.2.26",
     "nav-frontend-typografi": "^2.0.39",
     "nav-frontend-typografi-style": "^1.1.1",
-    "qs": "^6.10.2",
+    "qs": "^6.10.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-router": "^6.1.1",
-    "react-router-dom": "^6.1.1",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
     "redux": "^4.1.2",
-    "slate": "^0.72.0",
+    "slate": "^0.72.8",
     "slate-history": "^0.66.0",
-    "slate-react": "^0.72.1",
-    "styled-components": "^5.3.3",
-    "superstruct": "^0.15.3"
+    "slate-react": "^0.72.8",
+    "styled-components": "^5.3.3"
   }
 }
