--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,35 +57,22 @@
     "@reduxjs/toolkit": "^1.8.0",
     "@styled-icons/material": "^10.34.0",
     "classnames": "^2.3.1",
-    "nav-frontend-alertstriper": "^3.0.38",
-    "nav-frontend-alertstriper-style": "^2.0.30",
-    "nav-frontend-chevron": "^1.0.24",
-    "nav-frontend-chevron-style": "^1.0.2",
-    "nav-frontend-core": "^5.1.1",
-    "nav-frontend-etiketter": "^2.0.12",
-    "nav-frontend-etiketter-style": "^1.0.7",
-    "nav-frontend-hjelpetekst": "^3.1.1",
+    "nav-datovelger": "^12.1.2",
+    "nav-frontend-alertstriper": "^4.0.1",
+    "nav-frontend-alertstriper-style": "^3.0.1",
+    "nav-frontend-core": "^6.0.1",
+    "nav-frontend-hjelpetekst": "^3.1.2",
     "nav-frontend-hjelpetekst-style": "^3.0.1",
-    "nav-frontend-ikoner-assets": "^2.0.10",
-    "nav-frontend-ikonknapper": "^1.0.14",
-    "nav-frontend-js-utils": "^1.0.19",
-    "nav-frontend-knapper": "^2.0.14",
-    "nav-frontend-knapper-style": "^1.0.5",
-    "nav-frontend-lenker": "^1.1.1",
-    "nav-frontend-lenker-style": "^0.2.42",
-    "nav-frontend-paneler": "^2.0.10",
-    "nav-frontend-paneler-style": "^0.3.34",
-    "nav-frontend-popover": "^1.1.4",
-    "nav-frontend-popover-style": "^1.1.1",
-    "nav-frontend-skjema": "^3.2.1",
-    "nav-frontend-skjema-style": "^2.2.1",
-    "nav-frontend-spinner": "^2.0.6",
-    "nav-frontend-spinner-style": "^0.2.6",
-    "nav-frontend-tabell-style": "^0.2.26",
-    "nav-frontend-typografi": "^2.0.39",
-    "nav-frontend-typografi-style": "^1.1.1",
+    "nav-frontend-ikonknapper": "^2.1.2",
+    "nav-frontend-knapper": "^3.1.2",
+    "nav-frontend-knapper-style": "^2.1.1",
+    "nav-frontend-popover": "^2.0.3",
+    "nav-frontend-spinner": "^3.0.1",
+    "nav-frontend-spinner-style": "^1.0.2",
+    "nav-frontend-tabell-style": "^2.1.1",
     "qs": "^6.10.3",
     "react": "^17.0.2",
+    "react-day-picker": "^7.4.10",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.2",
