Make sure project version of TS  is used
Co-authored-by: Christian Skrøvseth <cskrov@users.noreply.github.com>

--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -15,5 +15,6 @@
     "source.fixAll.eslint": true
   },
   "tslint.enable": false,
-  "prettier.requireConfig": true
+  "prettier.requireConfig": true,
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
