--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,44 +19,46 @@
   "devDependencies": {
     "@types/jest": "^27.4.1",
     "@types/qs": "^6.9.7",
-    "@types/react": "^17.0.40",
-    "@types/react-dom": "^17.0.13",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@types/react-redux": "^7.1.23",
-    "@types/styled-components": "^5.1.24",
+    "@types/styled-components": "^5.1.25",
     "@types/webpack-env": "^1.16.3",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
     "copyfiles": "^2.4.1",
     "css-loader": "^6.7.1",
-    "eslint": "^8.11.0",
+    "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^26.1.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.1.5",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "lint-staged": "^12.3.6",
-    "prettier": "^2.6.0",
+    "prettier": "^2.6.2",
     "style-loader": "^3.3.1",
     "ts-jest": "^27.1.3",
     "ts-loader": "^9.2.8",
-    "typescript": "^4.6.2",
-    "webpack": "^5.70.0",
+    "typescript": "^4.6.3",
+    "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
     "@navikt/ds-icons": "^0.8.5",
     "@navikt/fnrvalidator": "^1.2.0",
     "@reduxjs/toolkit": "^1.8.0",
     "@styled-icons/material": "^10.34.0",
+    "@types/uuid": "^8.3.4",
     "classnames": "^2.3.1",
+    "fast-json-patch": "^3.1.1",
     "nav-datovelger": "^12.1.2",
     "nav-frontend-alertstriper": "^4.0.1",
     "nav-frontend-alertstriper-style": "^3.0.1",
@@ -74,13 +76,14 @@
     "react": "^17.0.2",
     "react-day-picker": "^7.4.10",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "react-router": "^6.2.2",
-    "react-router-dom": "^6.2.2",
+    "react-redux": "^7.2.8",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "redux": "^4.1.2",
-    "slate": "^0.75.0",
+    "slate": "^0.78.0",
     "slate-history": "^0.66.0",
-    "slate-react": "^0.75.0",
-    "styled-components": "^5.3.3"
+    "slate-react": "^0.77.4",
+    "styled-components": "^5.3.5",
+    "uuid": "^8.3.2"
   }
 }
