Use settings properly in filters for oppgaver
Co-authored-by: Daniel Eriksson <eriksson-daniel@users.noreply.github.com>

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,7 +15,8 @@
     "isolatedModules": true,
     "noEmit": false,
     "jsx": "react",
-    "sourceMap": true
+    "sourceMap": true,
+    "noUncheckedIndexedAccess": false
   },
   "outDir": "./dist",
   "include": ["./src"],
