Enforce no unchecked index access in TS

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -16,7 +16,7 @@
     "noEmit": false,
     "jsx": "react",
     "sourceMap": true,
-    "noUncheckedIndexedAccess": false
+    "noUncheckedIndexedAccess": true
   },
   "outDir": "./dist",
   "include": ["./src"],
