--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,7 @@
     "test": "jest",
     "testcov": "jest --coverage --no-cache",
     "lint": "eslint src --color",
-    "lint-fix": "eslint src --color --fix",
-    "prepare": "cd .. && husky install frontend/.husky"
+    "lint-fix": "eslint src --color --fix"
   },
   "license": "MIT",
   "devDependencies": {
@@ -35,7 +34,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
-    "husky": "^8.0.1",
     "jest": "^28.1.0",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
