--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,9 +47,11 @@
     "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
-    "@navikt/ds-css": "^0.17.2",
-    "@navikt/ds-icons": "^0.8.12",
-    "@navikt/ds-react": "^0.18.6",
+    "@navikt/ds-css": "^0.18.7",
+    "@navikt/ds-css-internal": "^0.7.7",
+    "@navikt/ds-icons": "^0.8.17",
+    "@navikt/ds-react": "^0.19.8",
+    "@navikt/ds-react-internal": "^0.14.8",
     "@navikt/fnrvalidator": "^1.2.0",
     "@reduxjs/toolkit": "^1.8.2",
     "@styled-icons/material": "^10.34.0",
