--- a/.github/workflows/manual-to-dev.yaml
+++ b/.github/workflows/manual-to-dev.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 env:
-  IMAGE: docker.pkg.github.com/${{ github.repository }}/kabal-frontend:${{ github.sha }}
+  IMAGE: ghcr.io/${{ github.repository }}/kabal-frontend:${{ github.sha }}
 
 jobs:
   deploytodev:
@@ -54,7 +54,7 @@ jobs:
         run: |
           cat Dockerfile
           docker build --build-arg VERSION --tag ${IMAGE} .
-          docker login docker.pkg.github.com -u ${GITHUB_REPOSITORY} -p ${GITHUB_TOKEN}
+          docker login ghcr.io -u ${GITHUB_REPOSITORY} -p ${GITHUB_TOKEN}
           docker push ${IMAGE}
       - uses: actions/checkout@v2
         name: Checkout code
