--- a/.github/workflows/manual-to-prod.yaml
+++ b/.github/workflows/manual-to-prod.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 env:
-  IMAGE: docker.pkg.github.com/${{ github.repository }}/kabal-frontend:${{ github.sha }}
+  IMAGE: ghcr.io/${{ github.repository }}/kabal-frontend:${{ github.sha }}
 
 jobs:
   deployprod:
