--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,8 +47,9 @@
     "webpack-dev-server": "^4.10.0"
   },
   "dependencies": {
-    "@navikt/ds-css": "^0.18.28",
+    "@navikt/ds-css": "^0.18.29",
     "@navikt/ds-css-internal": "^0.7.7",
+    "@navikt/ds-datepicker": "^3.1.1",
     "@navikt/ds-icons": "^0.8.20",
     "@navikt/ds-react": "^0.19.27",
     "@navikt/ds-react-internal": "^0.14.28",
@@ -57,11 +58,12 @@
     "@styled-icons/material": "^10.34.0",
     "@types/uuid": "^8.3.4",
     "classnames": "^2.3.1",
-    "nav-datovelger": "^12.6.0",
+    "dayjs": "^1.11.5",
     "nav-frontend-alertstriper": "^4.0.1",
     "nav-frontend-alertstriper-style": "^3.0.1",
     "nav-frontend-core": "^6.0.1",
     "nav-frontend-popover": "^2.0.3",
+    "nav-frontend-skjema": "^4.0.6",
     "nav-frontend-spinner": "^3.0.1",
     "nav-frontend-spinner-style": "^1.0.2",
     "nav-frontend-tabell-style": "^2.1.1",
