--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,6 @@
     "lint-fix": "eslint src --color --fix"
   },
   "dependencies": {
-    "@elastic/ecs-morgan-format": "^1.1.0",
     "@types/cors": "^2.8.12",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -24,22 +23,18 @@
     "helmet": "^4.6.0",
     "http-proxy-middleware": "^2.0.6",
     "jose": "^2.0.5",
-    "morgan": "^1.10.0",
-    "morgan-body": "^2.6.6",
     "node-fetch": "^3.2.10",
     "openid-client": "^4.9.1",
-    "redis": "^3.1.2",
-    "winston": "^3.8.1"
+    "redis": "^3.1.2"
   },
   "devDependencies": {
-    "@elastic/ecs-winston-format": "^1.3.1",
     "@types/cookie-parser": "^1.4.3",
     "@types/dotenv-flow": "^3.2.0",
     "@types/jest": "^28.1.8",
     "@types/morgan": "^1.9.3",
     "@types/redis": "^2.8.32",
-    "@typescript-eslint/eslint-plugin": "^5.35.1",
-    "@typescript-eslint/parser": "^5.35.1",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
     "env-cmd": "^10.1.0",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
