--- a/server/package.json
+++ b/server/package.json
@@ -18,26 +18,28 @@
     "@types/cors": "^2.8.12",
     "cors": "^2.8.5",
     "dotenv-flow": "^3.2.0",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
+    "express-prom-bundle": "^6.5.0",
     "http-proxy-middleware": "^2.0.6",
-    "jose": "^4.9.2",
+    "jose": "^4.10.0",
     "node-fetch": "^3.2.10",
-    "openid-client": "^5.1.9"
+    "openid-client": "^5.1.10",
+    "prom-client": "^14.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/jest": "^28.1.8",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
-    "@typescript-eslint/parser": "^5.37.0",
-    "eslint": "^8.23.1",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
+    "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^27.0.4",
+    "eslint-plugin-jest": "^27.1.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^28.1.3",
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.8",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.4"
   }
 }
