--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -27,4 +27,7 @@
   "[jsonc]": {
     "editor.defaultFormatter": "vscode.json-language-features"
   },
+  "[json]": {
+    "editor.defaultFormatter": "vscode.json-language-features"
+  },
 }
