--- a/nais/dev.yaml
+++ b/nais/dev.yaml
@@ -2,10 +2,12 @@ ingresses:
   - https://kabal.dev.nav.no
 tenant: trygdeetaten.no
 roles:
-  - 07add1e7-7195-4c37-828d-fdf23ec6bef1 # ROLE_KLAGE_SAKSBEHANDLER
-  - 94d34f17-e325-4ed6-9667-d23041a3f40c # ROLE_KLAGE_FAGANSVARLIG
-  - 016fb83f-4e7c-47ec-ae8a-e3efa72a43e7 # ROLE_KLAGE_LEDER
-  - 094f801c-1085-4832-9463-25bf7a1087f1 # ROLE_KLAGE_MERKANTIL
-  - 2980c598-8af7-473f-b7d1-233f785d7001 # ROLE_KLAGE_FORTROLIG
-  - de92036b-c350-471c-9249-753f36acd24d # ROLE_KLAGE_STRENGT_FORTROLIG
-  - 011af9b0-792d-4d2c-a2eb-9a59fc095002 # ROLE_KLAGE_EGEN_ANSATT
+  - 7ad08bfe-68d4-4c84-bddd-82d8894fb36e # KABAL_OPPGAVESTYRING_ALLE_ENHETER
+  - 0097d4ff-787d-4180-953a-8d60b7927f32 # KABAL_MALTEKSTREDIGERING
+  - 07add1e7-7195-4c37-828d-fdf23ec6bef1 # KABAL_SAKSBEHANDLING
+  - 94d34f17-e325-4ed6-9667-d23041a3f40c # KABAL_FAGTEKSTREDIGERING
+  - 016fb83f-4e7c-47ec-ae8a-e3efa72a43e7 # KABAL_INNSYN_EGEN_ENHET
+  - ea930b6b-9397-44d9-b9e6-f4cf527a632a # FORTROLIG
+  - 5ef775f2-61f8-4283-bf3d-8d03f428aa14 # STRENGT_FORTROLIG
+  - dbe4ad45-320b-4e9a-aaa1-73cca4ee124d # EGEN_ANSATT
+  - a9f5ef81-4e81-42e8-b368-0273071b64b9 # KABAL_ADMIN
