--- a/nais/prod.yaml
+++ b/nais/prod.yaml
@@ -2,11 +2,12 @@ ingresses:
   - https://kabal.intern.nav.no
 tenant: nav.no
 roles:
-  - 2b671b60-9650-4839-9139-40999bbb0f71 # ROLE_KLAGE_SAKSBEHANDLER
-  - 1edfbdf1-c1bc-4dc6-9cab-4fff1cb7e2a8 # ROLE_KLAGE_FAGANSVARLIG
-  - e9de217a-7244-45ac-8a06-1994905d7964 # ROLE_KLAGE_LEDER
-  - e994791a-aa14-404d-aee2-e6291817a154 # ROLE_KLAGE_MERKANTIL
-  - 94f37fa2-94c9-49f7-b4df-e6be7c0d1082 # ROLE_KLAGE_FORTROLIG
-  - ac0f28e8-115e-4972-b063-162366bb9399 # ROLE_KLAGE_STRENGT_FORTROLIG
-  - b14cf640-30bc-4420-b34c-26488c15e71e # ROLE_KLAGE_EGEN_ANSATT
-  - cd78b8e8-73a3-4fb6-8234-7bebb5e5b9e9 # ROLE_ADMIN
+  - 1c006e8b-c667-4622-9df7-43ed2fd494d6 # KABAL_OPPGAVESTYRING_ALLE_ENHETER
+  - 95c25ca2-e3e9-423e-a55f-9bc327c29f96 # KABAL_MALTEKSTREDIGERING
+  - 2b671b60-9650-4839-9139-40999bbb0f71 # KABAL_SAKSBEHANDLING
+  - 1edfbdf1-c1bc-4dc6-9cab-4fff1cb7e2a8 # KABAL_FAGTEKSTREDIGERING
+  - e9de217a-7244-45ac-8a06-1994905d7964 # KABAL_INNSYN_EGEN_ENHET
+  - 9ec6487d-f37a-4aad-a027-cd221c1ac32b # FORTROLIG
+  - ad7b87a6-9180-467c-affc-20a566b0fec0 # STRENGT_FORTROLIG
+  - e750ceb5-b70b-4d94-b4fa-9d22467b786b # EGEN_ANSATT
+  - cd78b8e8-73a3-4fb6-8234-7bebb5e5b9e9 # KABAL_ADMIN
