--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,12 +21,12 @@
     "@types/react-redux": "^7.1.25",
     "@types/styled-components": "^5.1.26",
     "@types/webpack-env": "^1.18.0",
-    "@typescript-eslint/eslint-plugin": "^5.53.0",
-    "@typescript-eslint/parser": "^5.53.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
     "copyfiles": "^2.4.1",
     "css-loader": "^6.7.3",
-    "eslint": "^8.34.0",
-    "eslint-config-prettier": "^8.6.0",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
@@ -45,11 +45,11 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "@navikt/ds-css": "^2.3.1",
-    "@navikt/ds-css-internal": "^2.3.1",
-    "@navikt/ds-icons": "^2.3.1",
-    "@navikt/ds-react": "^2.3.1",
-    "@navikt/ds-react-internal": "^2.3.1",
+    "@navikt/ds-css": "^2.6.0",
+    "@navikt/ds-css-internal": "^2.6.0",
+    "@navikt/ds-icons": "^2.6.0",
+    "@navikt/ds-react": "^2.6.0",
+    "@navikt/ds-react-internal": "^2.6.0",
     "@navikt/fnrvalidator": "^1.3.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@styled-icons/fluentui-system-regular": "^10.47.0",
@@ -58,13 +58,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router": "^6.8.1",
-    "react-router-dom": "^6.8.1",
+    "react-router": "^6.8.2",
+    "react-router-dom": "^6.8.2",
     "redux": "^4.2.1",
-    "slate": "0.90.0",
+    "slate": "^0.91.4",
     "slate-history": "^0.86.0",
-    "slate-react": "0.90.0",
-    "styled-components": "^5.3.6",
+    "slate-react": "^0.91.8",
+    "styled-components": "^5.3.8",
     "uuid": "^9.0.0"
   }
 }
