--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,12 +1,15 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": false,
     "skipLibCheck": false,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "suppressImplicitAnyIndexErrors": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
@@ -19,6 +22,10 @@
     "noUncheckedIndexedAccess": true
   },
   "outDir": "./dist",
-  "include": ["./src/**/*"],
-  "exclude": ["./dist/**"]
+  "include": [
+    "./src/**/*"
+  ],
+  "exclude": [
+    "./dist/**"
+  ]
 }
