--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
-  "typescript.validate.enable": true,
   "eslint.validate": [
     "javascript",
     "javascriptreact",
@@ -15,15 +14,20 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
-  "tslint.enable": false,
-  "prettier.requireConfig": true,
+  "typescript.validate.enable": true,
   "typescript.tsdk": "node_modules/typescript/lib",
+  "workbench.editor.closeOnFileDelete": true,
+  "npm-intellisense.importQuotes": "'",
+  "npm-intellisense.importES6": true,
+  "npm-intellisense.showBuildInLibs": true,
   "liveshare.autoShareServers": true,
   "liveshare.openSharedServers": false,
   "liveshare.languages.allowGuestCommandControl": true,
   "liveshare.allowGuestDebugControl": true,
   "liveshare.allowGuestTaskControl": true,
   "liveshare.notebooks.allowGuestExecuteCells": true,
+  "tslint.enable": false,
+  "prettier.requireConfig": true,
   "[jsonc]": {
     "editor.defaultFormatter": "vscode.json-language-features"
   },
