--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -33,6 +33,18 @@
   "settings": {
     "react": {
       "version": "18"
+    },
+    "import/parsers": {
+      "@typescript-eslint/parser": [
+        ".ts",
+        ".tsx"
+      ]
+    },
+    "import/resolver": {
+      "typescript": {
+        "alwaysTryTypes": true,
+        "project": "./tsconfig.json"
+      }
     }
   },
   "root": true,
