Add stricter ESLint import rules

--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -121,6 +121,9 @@
     "import/no-default-export": "error",
     "import/no-duplicates": "error",
     "import/no-self-import": "error",
+    "import/no-named-as-default": "error",
+    "import/no-named-as-default-member": "error",
+    "import/no-unresolved": "error",
     "import/no-unused-modules": [
       "error",
       {
