Add stricter ESLint import rules in backend

--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -126,6 +126,9 @@
     "import/no-default-export": "off",
     "import/no-duplicates": "error",
     "import/no-self-import": "error",
+    "import/no-named-as-default": "error",
+    "import/no-named-as-default-member": "error",
+    "import/no-unresolved": "error",
     "import/no-unused-modules": [
       "error",
       {
